expr/grammar.js
    source_file: ($) => $.expression, // expr grammar is for expressions only
    expression: ($) => prec.left(seq($._expr_atom, repeat($._expr_tail))),
    _expr_atom: ($) =>
      choice(
        $.json_object_literal,
        $._parenthetical_expression,
        $.macro,

        // Literals
        $.string_literal,
        $.numeric_literal,
        $.json_array_literal,

        // Variables
        $.ole_object_reference,
        $.lvn,
        $.gvn,
        $.ssvn,
        $.instance_variable,
        $.sql_field_reference,

        // Builtin functions
        $.system_defined_variable,
        $.system_defined_function,

        // User defined functions
        $.extrinsic_function,

        // ..property/method/parameter references
        $.relative_dot_property,
        $.relative_dot_method,
        $.relative_dot_parameter,
        $.oref_chain_expr,

        // Other special keywords
        $.class_method_call,
        $.superclass_method_call,
        $.unary_expression,
        $.indirection,
        $.pound_quote,

        $.expression_call,
      ),

    _expr_tail: ($) =>
      prec.left(
        1,
        choice(seq($.binary_operator, $.expression), $.pattern_operator),
      ),

    binary_operator: (_) =>
      choice(
        '**', // Exponentiation
        '*', // Multiplication
        '/', // Division
        '\\', // Integer-division
        '#', // Modulo
        '+', // Addition
        '-', // Subtraction
        '=', // Equality
        '\'=', // Inequality
        '<', // Less than
        '<=', // Less than-or-equal
        '\'>', // Not greater-than (same as <=)
        '>', // Greater than
        '>=', // Greater than-or-equal
        '\'<', // Not less-than (same as >=)
        '\'', // Negation
        '!', // Logical OR
        '||', // Logical OR (short-circuit)
        '\'!', // Not OR
        '&', // Logical AND
        '&&', // Logical AND (short-circuit)
        '\'&', // Not AND
        '_', // Concatenate
        ']', // Follows
        '\']', // Not follows
        '[', // Contains
        '\'[', // Not contains
        ']]', // Sorts-after
        '\']]', // Not Sorts-after
      ),
    _dollarsf: ($) =>
      prec.right(
        seq(
          token(seq(/\$SYSTEM/i, token.immediate('.'))),
          alias($._base_variable_immediate, $.class_name),
          token.immediate('.'),
          alias($._base_variable_immediate, $.method_name),
          choice($.method_args, repeat1($.oref_chain_segment)),
        ),
      ),

    method_arg: ($) => choice($.expression, $.byref_arg, $.variadic_arg),
    lvn: ($) => prec.right(seq($._base_variable, optional($.method_args))),
    system_defined_function: ($) =>
      choice(
        // Keep specialized rules before generic _dollar_function to avoid conflicts.
        $._dollar_list,
        $._built_in_func_with_pos_options,
        $._dollar_case,
        $._dollar_select,
        $._dollar_bitlogic,
        $._dollar_method,
        $._dollar_text,
        $._dollarsf,
        $._dollar_function,
        $._dollar_mv,
        alias(choice(/\$THIS/i, /##this/i), $.keyword_this),
      ),

    _dollar_text: ($) =>
      seq(
        // $T or $TEXT, followed by '(' with no space
        token(seq(/\$T(EXT)?/i, token.immediate('('))),
        $._text_line_ref,
        ')',
      ),

    _dollar_bitlogic: ($) =>
      seq(
        /\$BITLOGIC/i,
        token.immediate('('),
        $._bitlogic_expression,
        optional(seq(',', $.expression)), // length/flags arg
        ')',
      ),

    _dollar_mv: ($) =>
      seq(
        token(seq(/\$MV(AT)?/i, token.immediate('('))),
        optional(
          build_function_arguments(choice($.method_arg, $.dollar_arg_opt)),
        ),
        ')',
      ),

    _dollar_function: ($) =>
      seq(
        token(
          seq(
            choice(
              /\$zobjoid/i,
              /\$zobjval/i,
              /\$zu(til)?/i,
              /\$zli(st)?/i,
              /\$zobjmod(s)?/i,
              /\$ZDATETIMEH/i,
              /\$ZDTH/i,
              /\$ZDATEH/i,
              /\$ZDH/i,
              /\$ZDATETIME/i,
              /\$ZDT/i,
              /\$ZDATE/i,
              /\$ZD/i,
              /\$ZTIMEH/i,
              /\$ZTH/i,
              /\$NUM(BER)?/i,
              /\$FN(UMBER)?/i,
              /\$LISTBUILD/i,
              /\$LB/i,
              /\$LISTTOSTRING/i,
              /\$LTS/i,
              /\$LISTFROMSTRING/i,
              /\$LFS/i,
              /\$V(IEW)?/i,
              /\$LISTDATA/i,
              /\$LD/i,
              /\$ZT(IME)?/i,
              /\$zobjcnt/i,
              /\$zobjref/i,
              /\$zel(ement)?/i,
              /\$zlts/i,
              /\$zle(NGTH)/i,
              /\$zlp/i,
              /\$zobjexport/i,
              /\$BIT/i,
              /\$D(ATA)?/i,
              /\$LISTSAME/i,
              /\$LS/i,
              /\$MATCH/i,
              /\$NORMALIZE/i,
              /\$QS(UBSCRIPT)?/i,
              /\$ZBITAND/i,
              /\$ZBITCOUNT/i,
              /\$ZPOWER/i,
              /\$BITCOUNT/i,
              /\$BITFIND/i,
              /\$C(HAR)?/i,
              /\$WC(HAR)?/i,
              /\$ZF/i,
              /\$XECUTE/i,
              /\$A(SCII)?/i,
              /\$ZO(RDER)?/i, // $ZORDER
              /\$BP/i,
              /\$CE/i,
              /\$ZR/i,
              /\$ZP/i,
              /\$ZVD(ATA)?/i,
              /\$ZVO(RDER)?/i,
              /\$ZVQ(UERY)?/i,
              /\$ZUNION/i,
              /\$ZRV/i,
              /\$CHANGE/i,
              /\$ZPD/i,
              /\$CL/i,
              /\$ZPI/i,
              /\$EL/i,
              /\$EP/i,
              /\$ZPL/i,
              /\$ZPFV/i,
              /\$EPI/i,
              /\$INDEX/i,
              /\$ZPF/i,
              /\$INDEXNUM/i,
              /\$ZOBJNEW/i,
              /\$INDEXNEW/i,
              /\$INDEXPASS/i,
              /\$ZOBJNEXT/i,
              /\$ZOBJINT/i,
              /\$ZOBJID/i,
              /\$ZOBJKILLOID/i,
              /\$ZOBJPARAM/i,
              /\$ZOBJINCREF/i,
              /\$ZOBJGETOID/i,
              /\$INDEXREF/i,
              /\$ZOBJSTATE/i,
              /\$INDEXSAVE/i,
              /\$INDEXSORT/i,
              /\$INDEXSTART/i,
              /\$INDEXVAL/i,
              /\$MVCVTNUM/i,
              /\$MVFMT/i,
              /\$MVICONV/i,
              /\$MVICONVS/i,
              /\$ZPM/i,
              /\$MVINMAT/i,
              /\$MVLOWER/i,
              /\$MVOCONV(s)?/i,
              /\$MVRAISE/i,
              /\$MVTRANS/i,
              /\$ZOBJPURGE/i,
              /\$MVV/i,
              /\$N(ext)?/i,
              /\$U2NULL/i,
              /\$ZCOMP/i,
              /\$ZDIFF/i,
              /\$ZDSWAP/i,
              /\$ZEXTRACT/i,
              /\$ZSR/i,
              /\$ZGROUP/i,
              /\$ZINCR(EMENT)?/i,
              /\$ZISECT/i,
              /\$ZISWIDE/i,
              /\$ZJ(OB)?/i,
              /\$ZLCHK/i,
              /\$ZLSWAP/i,
              /\$zne(xt)?/i,
              /\$ZNS/i,
              /\$ZOBJDECREF/i,
              /\$ZPREVIOUS/i,
              /\$ZQSWAP/i,
              /\$ZWSWAP/i,
              /\$ZSET/i,
              /\$ZS(ORT)?/i,
              /\$ZSU(BLIST)?/i,
              /\$DECIMAL/i,
              /\$FACTOR/i,
              /\$G(ET)?/i,
              /\$L(ENGTH)?/i,
              /\$NA(ME)?/i,
              /\$ST(ACK)?/i,
              /\$WA(SCII)?/i,
              /\$ZDA(SCII)?/i,
              /\$ZLA(SCII)?/i,
              /\$ZQA(SCII)?/i,
              /\$ZSEEK/i,
              /\$ZWA(SCII)?/i,
              /\$ZWIDTH/i,
              /\$CLASSNAME/i,
              /\$NOW/i,
              /\$COMPILE/i,
              /\$DOUBLE/i,
              /\$ISO(BJECT)?/i,
              /\$ISVECTOR/i,
              /\$LISTLENGTH/i,
              /\$LL/i,
              /\$LISTVALID/i,
              /\$LV/i,
              /\$QL(ENGTH)?/i,
              /\$RE(VERSE)?/i,
              /\$T(EXT)?/i,
              /\$WISWIDE/i,
              /\$WL(ENGTH)?/i,
              /\$WRE(VERSE)?/i,
              /\$WF(IND)?/i,
              /\$ZABS/i,
              /\$ZARCCOS/i,
              /\$ZARCSIN/i,
              /\$ZARCTAN/i,
              /\$ZCOS/i,
              /\$ZCOT/i,
              /\$ZCSC/i,
              /\$ZC(YC)?/i,
              /\$ZDC(HAR)?/i,
              /\$ZEXP/i,
              /\$ZH(EX)?/i,
              /\$ZI(SWIDE)/i,
              /\$ZLC(HAR)?/i,
              /\$ZLN/i,
              /\$ZLOG/i,
              /\$ZQC(HAR)?/i,
              /\$ZSE(ARCH)?/i,
              /\$ZSEC/i,
              /\$ZSI(N)?/i,
              /\$ZSQR/i,
              /\$zstl/i,
              /\$ZTAN/i,
              /\$ZWC(HAR)?/i,
              /\$ZWPACK/i,
              /\$ZWBPACK/i,
              /\$ZWUNPACK/i,
              /\$ZWBUNPACK/i,
              /\$F(IND)?/i,
              /\$IN(UMBER)?/i,
              /\$J(USTIFY)?/i,
              /\$NC(ONVERT)?/i,
              /\$VE(CTOR)?/i,
              /\$VECTORDEFINED/i,
              /\$VD/i,
              /\$VECTOROP/i,
              /\$VOP/i,
              /\$TR(ANSLATE)?/i,
              /\$ZCRC/i,
              /\$ZPOSITION/i,
              /\$ZNAME/i,
              /\$ZZENKAKU/i,
              /\$I(NCREMENT)?/i,
              /\$ISVALIDDOUBLE/i,
              /\$ISVALIDNUM/i,
              /\$LISTNEXT/i,
              /\$LISTFIND/i,
              /\$LF/i,
              /\$ZB(OOLEAN)?/i,
              /\$LOCATE/i,
              /\$PREPROCESS/i,
              /\$O(RDER)?/i,
              /\$PARAMETER/i,
              /\$PREFETCHOFF/i,
              /\$PREFETCHON/i,
              /\$PROPERTY/i,
              /\$Q(UERY)?/i,
              /\$R(ANDOM)?/i,
              /\$SEQ(UENCE)?/i,
              /\$REPLACE/i,
              /\$SC(ONVERT)?/i,
              /\$ZCONVERT/i,
              /\$ZCVT/i,
              /\$ZSTRIP/i,
              /\$SORTBEGIN/i,
              /\$SORTEND/i,
              /\$ZBITFIND/i,
              /\$ZBITGET/i,
              /\$ZBITLEN/i,
              /\$ZBITNOT/i,
              /\$ZBITOR/i,
              /\$ZBITSET/i,
              /\$ZBITSTR/i,
              /\$ZBITXOR/i,
              /\$ZOBJCLASS/i,
              /\$ZOBJPROPERTY/i,
              /\$ZV(ERSION)?/i, // $ZVERSION
            ),
            token.immediate('('),
          ),
        ),
        optional($._method_arg_list),
        ')',
      ),
    _dollar_select: ($) =>
      prec.right(
        seq(
          token(seq(/\$S(ELECT)?/i, token.immediate('('))),
          commaSep1(seq($.dollar_arg_pair)),
          ')',
        ),
      ),
    _dollar_case: ($) =>
      seq(
        token(seq(/\$CASE/i, token.immediate('('))),
        $.expression,
        choice(
          seq(
            repeat1(seq(',', $.dollar_arg_pair)),
            optional(seq(',', ':', choice($.expression))),
          ),
          seq(',', ':', $.expression, optional($.method_args)),
        ),
        ')',
      ),
    _dollar_list: ($) =>
      seq(
        token(
          seq(
            choice(/\$LI(ST)?/i, /\$LISTUPDATE/i, /\$LU/i),
            token.immediate('('),
          ),
        ),
        $._dollar_list_args,
        ')',
      ),
    _built_in_func_with_pos_options: ($) =>
      seq(
        token(
          seq(
            choice(
              /\$LISTGET/i,
              /\$LG/i,
              /\$P(IECE)?/i,
              /\$E(XTRACT)?/i,
              /\$WE(XTRACT)?/i,
            ),
            token.immediate('('),
          ),
        ),
        optional($._dollar_pos_method_arg_list),
        ')',
      ),
    _dollar_method: ($) =>
      seq(
        token(choice(/\$(ZOBJ)?METHOD/i, /\$(ZOBJ)?CLASSMETHOD/i)),
        token.immediate('('),
        optional($._method_arg_list),
        ')',
      ),
    objectscript_identifier: (_) => new RustRegex(IDENTIFIER),
    _base_variable: ($) =>
      choice($.objectscript_identifier, $.objectscript_identifier_special),
    numeric_literal: (_) =>
      token(
        /[+-]?(?:\d+\.\d*(?:[eE][+-]?\d+)?|\.\d+(?:[eE][+-]?\d+)?|\d+(?:[eE][+-]?\d+)?)/,
      ),
    // any length sequence of characters besides ", between "
    // Double-quotes are escaped with double quotes
    string_literal: (_) => token(seq('"', repeat(choice(/[^"]+/, '""')), '"')),
