expr/test/corpus/list-and-number-functions.txt
==================================
$LISTTOSTRING with one argument
==================================
$LISTTOSTRING(list)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LTS shorthand with one argument
==================================
$LTS(list)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTTOSTRING with delimiter
==================================
$LISTTOSTRING(list,",")
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTTOSTRING with all arguments
==================================
$LISTTOSTRING(list,delim,flag)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTTOSTRING case insensitive
==================================
$listtostring(myList)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTTOSTRING with $LISTBUILD
==================================
$LISTTOSTRING($LB("a","b","c"),"/")
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (system_defined_function
            (method_arg
              (expression
                (string_literal)))
            (method_arg
              (expression
                (string_literal)))
            (method_arg
              (expression
                (string_literal))))))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTTOSTRING with empty delimiter
==================================
$LISTTOSTRING(list,,1)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$LISTLENGTH with one argument
==================================
$LISTLENGTH(list)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LL shorthand with one argument
==================================
$LL(list)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTLENGTH case insensitive
==================================
$listlength(myList)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTLENGTH with $LISTBUILD
==================================
$LISTLENGTH($LB(1,2,3))
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (system_defined_function
            (method_arg
              (expression
                (numeric_literal)))
            (method_arg
              (expression
                (numeric_literal)))
            (method_arg
              (expression
                (numeric_literal)))))))))

==================================
$LISTLENGTH with string literal
==================================
$LISTLENGTH(strVar)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTLENGTH in expression
==================================
$LL(list)+1
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))
    (binary_operator)
    (expression
      (numeric_literal))))

==================================
$LISTUPDATE with two arguments
==================================
$LISTUPDATE(list,1)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$LU shorthand
==================================
$LU(list,2)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$LISTUPDATE with value
==================================
$LISTUPDATE(list,1,"newvalue")
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTUPDATE with multiple position-value pairs
==================================
$LISTUPDATE(list,1,"first",3,"third")
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTUPDATE case insensitive
==================================
$listupdate(myList,2,val)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTUPDATE with nested list
==================================
$LISTUPDATE(list,2,$LB("nested"))
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (system_defined_function
            (method_arg
              (expression
                (string_literal)))))))))

==================================
$LISTVALID with one argument
==================================
$LISTVALID(list)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LV shorthand
==================================
$LV(list)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTVALID case insensitive
==================================
$listvalid(data)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTVALID with $LISTBUILD
==================================
$LISTVALID($LB(1,2,3))
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (system_defined_function
            (method_arg
              (expression
                (numeric_literal)))
            (method_arg
              (expression
                (numeric_literal)))
            (method_arg
              (expression
                (numeric_literal)))))))))

==================================
$LISTVALID with string literal
==================================
$LISTVALID("test")
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal))))))

==================================
$LISTVALID in conditional
==================================
$LISTVALID(x)=1
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))
    (binary_operator)
    (expression
      (numeric_literal))))

==================================
$FNUMBER with one argument
==================================
$FNUMBER(num)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$FN shorthand
==================================
$FN(num)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$FNUMBER with format
==================================
$FNUMBER(123.456,",")
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$FNUMBER with format and decimal places
==================================
$FNUMBER(num,".",2)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$FNUMBER case insensitive
==================================
$fnumber(value,"P",2)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$FNUMBER with numeric literal
==================================
$FNUMBER(1234567.89,",",2)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$FNUMBER with empty format
==================================
$FNUMBER(num,,4)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$FNUMBER with negative number
==================================
$FNUMBER(-1234.56,"T",2)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$LISTSAME with two arguments
==================================
$LISTSAME(list1,list2)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LS shorthand
==================================
$LS(list1,list2)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTSAME case insensitive
==================================
$listsame(a,b)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$LISTSAME with $LISTBUILD
==================================
$LISTSAME($LB(1,2),$LB(1,2))
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (system_defined_function
            (method_arg
              (expression
                (numeric_literal)))
            (method_arg
              (expression
                (numeric_literal))))))
      (method_arg
        (expression
          (system_defined_function
            (method_arg
              (expression
                (numeric_literal)))
            (method_arg
              (expression
                (numeric_literal)))))))))

==================================
$LISTSAME in conditional
==================================
$LISTSAME(x,y)=1
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))
    (binary_operator)
    (expression
      (numeric_literal))))

==================================
$NUMBER with one argument
==================================
$NUMBER(num)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$NUM shorthand
==================================
$NUM(num)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$NUMBER with format
==================================
$NUMBER("123.45",".",",")
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$NUMBER with all four arguments
==================================
$NUMBER(val,".",0,100)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$NUMBER case insensitive
==================================
$number(value)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))))

==================================
$NUMBER with string input
==================================
$NUMBER("1,234.56",",.")
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (string_literal))))))

==================================
$NUMBER with min and max
==================================
$NUMBER(x,,1,10)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$NUMBER with negative bounds
==================================
$NUMBER(num,"",-100,100)
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier))))
      (method_arg
        (expression
          (string_literal)))
      (method_arg
        (expression
          (numeric_literal)))
      (method_arg
        (expression
          (numeric_literal))))))

==================================
$NUMBER in expression
==================================
$NUMBER(x)+1
---

(source_file
  (expression
    (system_defined_function
      (method_arg
        (expression
          (lvn
            (objectscript_identifier)))))
    (binary_operator)
    (expression
      (numeric_literal))))
